more specs for Book

--- a/TODO
+++ b/TODO
@@ -2,4 +2,5 @@
 * Figure out the ISBN algorithm so that valid ISBNs can be generated.
 * Look into using will_paginate's agnostic branch for pagination.
 * Work with the new merb-cache.
-* add a README.
+* Add a README.
+* Update to use DataMapper's OR querying when it's finished.
